# qpid

qmf/: .gitignore  CMakeLists.txt  Makefile
qmf/doc/: Doxyfile
qmf/src/: CMakeLists.txt
qmf/src/bindings/: CMakeLists.txt
qmf/src/bindings/qmf2/: CMakeLists.txt
qmf/src/bindings/qmf2/python/: CMakeLists.txt
qmf/src/bindings/qmf2/ruby/: CMakeLists.txt
qmf/src/include/qmf/: AddressParser.h  RefCounted.h
qmf/src/qmf/: AddressParser.cpp  Agent.cpp  AgentEventImpl.h  AgentImpl.h  AgentSession.cpp  AgentSessionImpl.h  CMakeLists.txt  ConsoleEventImpl.h  ConsoleSession.cpp  ConsoleSessionImpl.h  DataAddrImpl.h  DataImpl.h  PosixEventNotifierImpl.h  PrivateImplRef.h  Query.cpp  QueryImpl.h  SchemaIdImpl.h  SchemaImpl.h  SchemaMethod.cpp  SchemaMethodImpl.h  SchemaProperty.cpp  SchemaPropertyImpl.h  SubscriptionImpl.h
qpid/cpp/include/qmf/: Agent.h  Schema.h  SchemaMethod.h
qpid/cpp/src/qmf/: Agent.cpp  AgentImpl.h  NameCmp.h  Schema.cpp  SchemaImpl.h  SchemaMethod.cpp  SchemaMethodImpl.h
